--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
   background: #c00; /* vermelho G1 */
@@ -238,7 +238,7 @@ a:hover {
 /* ==================== BANNERS ==================== */
 .banner {
   position: fixed;
-  top: 400px;
+  top: 200px;
   width: 220px;
   background: #ddd;
   display: flex;
@@ -263,6 +263,14 @@ a:hover {
   border-radius: 4px;
 }
 
+video {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  border-radius: 10px;
+  display: block;
+  margin: 10px 0;
+}
 /* banners inline (escondidos no desktop) */
 .banner-inline {
   display: none;
@@ -290,6 +298,11 @@ a:hover {
     padding: 10px;
   }
 
+   video {
+    border-radius: 6px;
+    margin: 5px 0;
+  }
+
   .noticia {
     flex-direction: column;
   }
@@ -315,7 +328,7 @@ a:hover {
     position: absolute;
     top: 8vh;
     right: 0;
-    width: 20vw;
+    width: 50vw;
     height: 92vh;
     background: #c00;
     flex-direction: column;
